--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
       <!-- Make sure this image exists at /assets/img/headshot.jpg -->
       <div class="hero-photo">
-        <img src="assets/img/headshot.jpg" alt="Portrait of Mirkomil Oblokulov">
+        <img src="asset/img/headshot.jpg" alt="Portrait of Mirkomil Oblokulov">
       </div>
     </div>
   </section>
