--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mirkomil Oblokulov — Portfolio</title>
   <meta name="description" content="Portfolio of Mirkomil Oblokulov — projects, experience, education, and skills." />
-  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='16' fill='%230a6e3e'/%3E%3Ctext x='50' y='60' text-anchor='middle' font-size='46' font-family='Arial' fill='white'%3EMO%3C/text%3E%3C/svg%3E">
+  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='16' fill='%230a6e3e'/%3E%3Ctext x='50' y='60' text-anchor='middle' font-size='46' font-family='Arial' fill='white'%3EMIRKOMIL%3C/text%3E%3C/svg%3E">
 
   <style>
     :root{
@@ -75,7 +75,7 @@
   <!-- NAV -->
   <header class="site-header" id="top">
     <div class="container">
-      <a href="#top" class="brand">MO</a>
+      <a href="#top" class="brand">MIRKOMIL</a>
       <nav class="nav">
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
@@ -92,17 +92,21 @@
     <div class="container hero-inner">
       <div class="hero-text">
         <h1>Mirkomil <span class="last">Oblokulov</span></h1>
-        <p class="tagline">Seeking internship opportunities • Actuarial Science @ Western University</p>
+        <p class="tagline">Double Major: Actuarial Science & Econmics @ Western University</p>
         <div class="hero-actions">
           <a class="icon-btn" href="https://www.linkedin.com/in/mirkoomil" target="_blank" rel="noreferrer" aria-label="LinkedIn">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="26" height="26" aria-hidden="true"><path fill="currentColor" d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4v16h-4zM8 8h3.8v2.2h.1c.5-1 1.7-2.3 3.6-2.3 3.8 0 4.5 2.5 4.5 5.8V24h-4v-7.2c0-1.7 0-3.8-2.3-3.8-2.3 0-2.7 1.8-2.7 3.7V24H8z"/></svg>
           </a>
           <a class="icon-btn" href="assets/Mirkomil_Oblokulov_Revised_Resume.pdf" target="_blank" rel="noreferrer" aria-label="Resume">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="26" height="26" aria-hidden="true"><path fill="currentColor" d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><path fill="currentColor" d="M14 2v6h6"/></svg>
-          </a>
-          <a class="icon-btn" href="mailto:mirkomiloblokulov@gmail.com" aria-label="Email">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="26" height="26" aria-hidden="true"><path fill="currentColor" d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm0 4-8 5L4 8V6l8 5 8-5z"/></svg>
-          </a>
+          <a
+  class="icon-btn"
+  href="mailto:mirkomiloblokulov@gmail.com?subject=Internship%20Opportunity&body=Hi%20Mirkomil%2C%0A%0AI%20saw%20your%20portfolio%20and%20would%20like%20to%20connect.%0A%0AThanks%2C%0A"
+  aria-label="Email Mirkomil"
+>
+  <!-- envelope SVG stays the same -->
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="26" height="26" aria-hidden="true"><path fill="currentColor" d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm0 4-8 5L4 8V6l8 5 8-5z"/></svg>
+</a>
         </div>
         <a href="#about" class="scroll-cue" aria-label="Scroll to About">▼</a>
       </div>
@@ -118,13 +122,7 @@
   <section id="about" class="section">
     <div class="container">
       <h2>About</h2>
-      <p>Actuarial Science student at Western University and varsity soccer athlete with hands-on experience in marketing, communications, and web development. Comfortable creating content, running digital campaigns, and building clean, responsive sites. Seeking an internship to grow skills and deliver measurable impact.</p>
-      <ul class="facts">
-        <li><strong>Location:</strong> Toronto, ON</li>
-        <li><strong>Email:</strong> <a href="mailto:mirkomiloblokulov@gmail.com">mirkomiloblokulov@gmail.com</a></li>
-        <li><strong>Phone:</strong> <a href="tel:+16477647799">+1 647-764-7799</a></li>
-        <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/mirkoomil" target="_blank" rel="noreferrer">/in/mirkoomil</a></li>
-      </ul>
+      <p>Hello, my name is Mirkomil Oblokulov. I’m passionate about actuarial science, technology, innovation, entrepreneurship, finance, financial modelling, and AI. I’m a third-year varsity athlete on Western University’s soccer team.</p>
     </div>
   </section>
 
