--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   <section id="about" class="section">
     <div class="container">
       <h2>About</h2>
-      <p>Hello, my name is Mirkomil Oblokulov. I’m passionate about actuarial science, technology, innovation, entrepreneurship, finance, financial modelling, and AI. I’m a third-year varsity athlete on Western University’s soccer team.</p>
+      <p>Hello, my name is Mirkomil Oblokulov, a second-year student at Western University pursuing a double major in Actuarial Science and Economics. I’m passionate about applying analytical and financial modelling skills to solve real-world problems, with interests in finance, technology, and AI. I’m currently seeking internship opportunities where I can bring my problem-solving mindset, technical skills, and teamwork experience as a varsity soccer athlete to make an impact.</p>
     </div>
   </section>
 
