--- a/index.html
+++ b/index.html
@@ -127,7 +127,10 @@
           <a class="icon-btn" href="https://www.linkedin.com/in/mirkoomil" target="_blank" rel="noreferrer" aria-label="LinkedIn">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="26" height="26" aria-hidden="true"><path fill="currentColor" d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4v16h-4zM8 8h3.8v2.2h.1c.5-1 1.7-2.3 3.6-2.3 3.8 0 4.5 2.5 4.5 5.8V24h-4v-7.2c0-1.7 0-3.8-2.3-3.8-2.3 0-2.7 1.8-2.7 3.7V24H8z"/></svg>
           </a>
-<a class="icon-btn" href="asset/img/Mirkomil Oblokulov - Resume.pdf" target="_blank" rel="noreferrer" aria-label="Resume">
+<a class="icon-btn" 
+  href="asset/img/Mirkomil Oblokulov - Resume.pdf" target="_blank" rel="noreferrer" 
+  aria-label="Resume">
+  
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="26" height="26" aria-hidden="true">
     <path fill="currentColor" d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
     <path fill="currentColor" d="M14 2v6h6"/></svg>
