--- a/index.html
+++ b/index.html
@@ -14,62 +14,8 @@
   <title>Mirkomil Oblokulov — Portfolio</title>
   <meta name="description" content="Portfolio of Mirkomil Oblokulov — projects, experience, education, and skills." />
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='16' fill='%230a6e3e'/%3E%3Ctext x='50' y='60' text-anchor='middle' font-size='46' font-family='Arial' fill='white'%3EMIRK%3C/text%3E%3C/svg%3E">
+<link rel="stylesheet" href="styles.css" />
 
-  <style>
-    :root{
-      --green:#0a6e3e;        /* main accent */
-      --green-dark:#074e2b;   /* navbar/footer */
-      --bg:#ffffff; --text:#0a0a0a; --muted:#626a72; --line:#e8e8e8;
-    }
-    *{box-sizing:border-box}
-    html{scroll-behavior:smooth}
-    body{margin:0;font:800 16px/1.65 system-ui,-apple-system,Segoe UI,Roboto,Inter,Helvetica,Arial,sans-serif;color:var(--text);background:var(--bg)}
-    .container{max-width:1500px;margin:0 auto;padding:0 20px}
-
-    /* Nav */
-    .site-header{position:sticky;top:0;z-index:50;background:var(--green-dark);color:#fff;border-bottom:1px solid rgba(255,255,255,.08)}
-    .site-header .container{display:flex;align-items:center;justify-content:space-between;padding:12px 0}
-    .brand{font-weight:900;letter-spacing:.5px;color:#fff;text-decoration:none}
-    .nav a{color:#fff;text-decoration:none;margin:0 12px;opacity:.9}
-    .nav a:hover{opacity:1}
-    .nav a.active{border-bottom:2px solid #fff;padding-bottom:2px}
-
-    /* Hero */
-    .hero{background:var(--green);color:#fff;padding:72px 0 88px;position:relative;overflow:hidden}
-    .hero-inner{display:grid;grid-template-columns:1fr 360px;gap:40px;align-items:center}
-    .hero h1{font-size:clamp(38px,6vw,72px);line-height:1;margin:0 0 12px;font-weight:900;letter-spacing:1px;text-transform:uppercase}
-    .hero h1 .last{opacity:.95;text-shadow:0 2px 0 rgba(0,0,0,.15)}
-    .tagline{font-size:clamp(16px,2.5vw,20px);opacity:.95;margin:8px 0 18px}
-    .hero-actions{display:flex;gap:16px;margin-top:8px}
-    .icon-btn{display:inline-grid;place-items:center;width:48px;height:48px;border-radius:10px;background:#fff;color:var(--green);text-decoration:none;font-weight:700;box-shadow:0 4px 20px rgba(0,0,0,.18)}
-    .icon-btn:hover{transform:translateY(-1px)}
-    .scroll-cue{display:inline-block;margin-top:28px;color:#fff;text-decoration:none;font-size:18px;opacity:.8}
-    .scroll-cue:hover{opacity:1}
-    .hero-photo{display:grid;place-items:center}
-    .hero-photo img{width:320px;height:320px;object-fit:cover;border-radius:50%;border:6px solid rgba(255,255,255,.85);box-shadow:0 12px 40px rgba(0,0,0,.35)}
-
-    /* Sections */
-    .section{padding:64px 0;border-top:1px solid var(--line);background:var(--bg)}
-    h2{font-size:clamp(22px,3vw,28px);margin:0 0 12px}
-    p{margin:8px 0}
-    .facts{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:8px 16px;padding-left:18px}
-    .cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:18px;margin-top:12px}
-    .card{border:1px solid var(--line);border-radius:14px;padding:16px;background:#fff;box-shadow:0 6px 18px rgba(0,0,0,.04)}
-    .card .meta{font-size:13px;color:var(--muted)}
-    .timeline{list-style:none;padding-left:0;margin:0}
-    .timeline>li{border-left:3px solid var(--green);padding-left:14px;margin-left:6px;margin-bottom:16px}
-    .timeline .when{color:var(--muted);font-weight:600;font-size:14px}
-    .skills-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:16px}
-    .btn{display:inline-block;background:var(--green);color:#fff;border-radius:12px;padding:10px 16px;text-decoration:none;font-weight:600}
-    .btn:hover{filter:brightness(1.05)}
-    .site-footer{background:var(--green-dark);color:#fff;padding:18px 0;text-align:center}
-
-    @media (max-width:900px){
-      .hero-inner{grid-template-columns:1fr}
-      .hero-photo{order:-1;margin-bottom:10px}
-      .hero-photo img{width:220px;height:220px}
-    }
-  </style>
 </head>
 <body>
   <script>
