--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Portfolio of Mirkomil Oblokulov — projects, experience, education, and skills." />
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='16' fill='%230a6e3e'/%3E%3Ctext x='50' y='60' text-anchor='middle' font-size='46' font-family='Arial' fill='white'%3EMIRK%3C/text%3E%3C/svg%3E">
 
-  <link rel="stylesheet" href="styles.css" />
+<link rel="stylesheet" href="css/styles.css" />
   
 </head>
 <body>
