feat: professional headshot and family favicon

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <meta property="og:title" content="Mirkomil Oblokulov | Actuarial Science Student & Entrepreneur" />
   <meta property="og:description"
     content="Mirkomil Oblokulov - Actuarial Science & Economics at Western University. CFA candidate, Founder of Oakwood Home Services, skilled in Python, quantitative finance, and web development." />
-  <meta property="og:image" content="https://mirkomiloblokulov.com/asset/img/headshot.jpg" />
+  <meta property="og:image" content="https://mirkomiloblokulov.com/asset/img/og-image.jpg" />
   <meta property="og:url" content="https://mirkomiloblokulov.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Mirkomil Oblokulov Portfolio" />
@@ -43,7 +43,7 @@
   <meta name="twitter:title" content="Mirkomil Oblokulov | Portfolio" />
   <meta name="twitter:description"
     content="View the professional portfolio of Mirkomil Oblokulov - Actuarial Science, Economics, Finance, and Tech projects." />
-  <meta name="twitter:image" content="https://mirkomiloblokulov.com/asset/img/headshot.jpg" />
+  <meta name="twitter:image" content="https://mirkomiloblokulov.com/asset/img/og-image.jpg" />
 
   <!-- Structured Data (JSON-LD) -->
   <script type="application/ld+json">
@@ -73,8 +73,7 @@
   </script>
 
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon"
-    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' rx='16' fill='%2338bdf8'/><text x='50' y='60' text-anchor='middle' font-size='46' font-family='Arial' fill='white'>M</text></svg>">
+  <link rel="icon" type="image/jpeg" href="asset/img/favicon.jpg">
 </head>
 
 <body>
@@ -274,7 +273,7 @@
                   </div>
             </div>
 
-            <button onclick="toggleProject('arbitrage')" class="btn btn-outline project-toggle"
+            <button onclick="openProject('arbitrage')" class="btn btn-outline project-toggle"
               style="font-size:0.8rem; padding:8px 16px;">
               <span class="toggle-text">View Details</span>
             </button>
@@ -301,7 +300,7 @@
               </div>
             </div>
 
-            <button onclick="toggleProject('ufa')" class="btn btn-outline project-toggle"
+            <button onclick="openProject('ufa')" class="btn btn-outline project-toggle"
               style="font-size:0.8rem; padding:8px 16px;">
               <span class="toggle-text">View Details</span>
             </button>
@@ -328,7 +327,7 @@
               </div>
             </div>
 
-            <button onclick="toggleProject('united')" class="btn btn-outline project-toggle"
+            <button onclick="openProject('united')" class="btn btn-outline project-toggle"
               style="font-size:0.8rem; padding:8px 16px;">
               <span class="toggle-text">View Details</span>
             </button>
